--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<div style="height:100vh;display:flex;flex-direction: column;justify-content: space-between;">
+				<div style="height:700px;display:flex;flex-direction: column;justify-content: space-between;">
 					<div
 						style="background: url('img/fundo.png'); background-repeat: no-repeat; background-size: cover;width:100%;height:70%">
 						<div style="height:100%;display: flex;flex-direction: column; justify-content: space-between;">
@@ -106,8 +106,8 @@
 							### Segmentação semântica
 							![](img/segmentacao.png)
 
-							1. Apenas classifica a qual class cada pixel sem
-							discriminar se o pixel pertence a instâncias diferentes
+							1. Identifica a qual classe cada pixel pertence sem
+							discriminar pertence a instâncias diferentes
 							1. Não permite saber quantos objetos existem daquela classe
 
 							
@@ -164,14 +164,14 @@
 				<div class="column" style="justify-content: space-between;min-width:500px">
 					<h4 style="text-align: center;">Semântica</h4>
 					<div data-markdown>
-					1. Quantidade total de determinada classe
+					- Quantidade total de determinada classe
 					</div>
 					<p style="font-size:20pt">Exemplo: quantidade total de vegetação em um mapa</p>
 				</div>
-				<div class="column" style="justify-content: space-between;">
+				<div class="column" style="justify-content: space-between">
 					<h4 style="text-align: center;">Instância</h4>
 					<div data-markdown>
-					1. Quantidade e área de cada instância
+					- Quantidade e área de cada instância
 					</div>
 					<p style="font-size:20pt">Exemplo: na medicina para calcular tamanho de órgãos e comparação com normalidade</p>
 				</div>	
