Fix initial bottom margin

--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
 						</div>
 					</div>
 					<div
-						style="display:flex;flex-direction:row;margin-bottom:10px;justify-content: space-between;margin-inline:30px">
+						style="
+						display:flex;
+						flex-direction:row;
+						margin-bottom:10px;
+						justify-content: space-between;
+						margin-inline:30px;
+						margin-bottom:43px;
+						">
 						<div style="text-align: left;font-size:24pt">
 							<p>Prof. Caio Hamamura</p>
 							<p>hamamura.caio@ifsp.edu.br</p>
